--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
 </head>
 
 <body>
-  <h1>10,000+ of our users love our products.</h1>
-
-  <h2>
-    We only provide great products combined with excellent customer service.
-    See what our satisfied customers are saying about our services.
-  </h2>
+  <header>
+    <h1>10,000+ of our users love our products.</h1>
+  
+    <h2>
+      We only provide great products combined with excellent customer service.
+      See what our satisfied customers are saying about our services.
+    </h2>
+  </header>
 
   <section class="rates">
     <div class="rate">
-      <div class="stars">
+      <div class="rate__stars">
         <img src="images/icon-star.svg" alt="gold star">
         <img src="images/icon-star.svg" alt="gold star">
         <img src="images/icon-star.svg" alt="gold star">
@@ -32,7 +34,7 @@
       <p>Rated 5 Stars in Reviews</p>
     </div>
     <div class="rate">
-      <div class="stars">
+      <div class="rate__stars">
         <img src="images/icon-star.svg" alt="gold star">
         <img src="images/icon-star.svg" alt="gold star">
         <img src="images/icon-star.svg" alt="gold star">
@@ -42,7 +44,7 @@
       <p>Rated 5 Stars in Report Guru</p>
     </div>
     <div class="rate">
-      <div class="stars">
+      <div class="rate__stars">
         <img src="images/icon-star.svg" alt="gold star">
         <img src="images/icon-star.svg" alt="gold star">
         <img src="images/icon-star.svg" alt="gold star">
