--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
       </p>
 
       <div class="component__footer">
-        <img class="component__avatar" src="images/avatar-michelle.jpg">
+        <img class="component__avatar" src="images/avatar-michelle.jpg" alt="author avatar">
         <div class="component__author">
           <p class="component__fullname">Michelle Appleton</p>
           <p class="component__date">28 Jun 2020</p>
         </div>
 
-        <button class="component__sharebtn"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="13"><path fill="#6E8098" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg></button>
+        <button class="component__sharebtn" aria-label="Share"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="13"><path fill="#6E8098" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg></button>
       </div>
     </div>
 
     <div class="component__share">
       <span class="component__share-text">share</span>
-      <img src="/images/icon-facebook.svg">
-      <img src="/images/icon-twitter.svg">
-      <img src="/images/icon-pinterest.svg">
+      <img src="/images/icon-facebook.svg" alt="facebook logo">
+      <img src="/images/icon-twitter.svg" alt="twitter logo">
+      <img src="/images/icon-pinterest.svg" alt="pinterest logo">
     </div>
   </div>
 
