--- a/index.html
+++ b/index.html
@@ -11,29 +11,31 @@
 </head>
 <body>
 
-  <header class="header">
-    <img class="header__logo" src="images/logo.svg" alt="Fylo logo">
-    <div class="header__icons">
-      <div class="header__icon"><img src="images/icon-document.svg" alt="Document icon"></div c>
-      <div class="header__icon"><img src="images/icon-folder.svg" alt="Folder icon"></div c>
-      <div class="header__icon"><img src="images/icon-upload.svg" alt="Upload icon"></div>
-    </div>
-  </header>
-
-  <section class="storage">
-    <p class="storage__used">You’ve used <spanc class="text-bold">815 GB</spanc> of your storage</p>
+  <div class="wrapper">
+    <header class="header">
+      <img class="header__logo" src="images/logo.svg" alt="Fylo logo">
+      <div class="header__icons">
+        <div class="header__icon"><img src="images/icon-document.svg" alt="Document icon"></div c>
+        <div class="header__icon"><img src="images/icon-folder.svg" alt="Folder icon"></div c>
+        <div class="header__icon"><img src="images/icon-upload.svg" alt="Upload icon"></div>
+      </div>
+    </header>
   
-    <div class="storage__bar">
-      <div class="storage__fill"></div>
-    </div>
-
-    <div class="storage__space">
-      <span class="text-bold">0 GB</span>
-      <span class="text-bold">1000 GB</span>
-    </div>
-
-    <div class="storage__left"><span class="text-big">185</span> GB Left</div>
-  </section>
+    <section class="storage">
+      <p class="storage__used">You’ve used <spanc class="text-bold">815 GB</spanc> of your storage</p>
+    
+      <div class="storage__bar">
+        <div class="storage__fill"></div>
+      </div>
+  
+      <div class="storage__space">
+        <span class="text-bold">0 GB</span>
+        <span class="text-bold">1000 GB</span>
+      </div>
+  
+      <div class="storage__left"><span class="text-big">185</span> GB Left</div>
+    </section>
+  </div>
   
 </body>
 </html>
