fix the after pseudoelement of the storage left element

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       </div>
   
       <div class="storage__left"><span class="text-big">185</span> GB Left</div>
+      <div class="test"></div>
     </section>
   </div>
   
