--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
   <link rel="stylesheet" href="style.css">
@@ -13,8 +12,6 @@
 <body>
 
   <section class="testimonials">
-
-
     <div class="testimonial active">
       <div class="testimonial__person">
         <img class="testimonial__picture" src="images/image-tanya.jpg" alt="Tanya's profile picture">
@@ -84,8 +81,8 @@
 
 
     <div class="testimonial__buttons">
-      <button id="prev"><img src="images/icon-prev.svg" alt="left arrow"></button>
-      <button id="next"><img src="images/icon-next.svg" alt="right arrow"></button>
+      <button id="prev" aria-label="previous"><img src="images/icon-prev.svg" alt="left arrow"></button>
+      <button id="next" aria-label="next"><img src="images/icon-next.svg" alt="right arrow"></button>
     </div>
   </section>
 
