improve email input accessibility

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </p>
 
       <form class="form" novalidate>
-        <input class="form__input" type="email" name="email" id="email" placeholder="Email Address">
+        <input class="form__input" type="email" aria-label="email" name="email" id="email" placeholder="Email Address">
         <img src="images/icon-error.svg" alt="exclamation mark" class="form__error-icon">
         <button class="form__button"><img src="images/icon-arrow.svg" alt="right arrow"></button>
         <span class="form__error">Please enter a valid email</span>
