--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <span class="form__error-msg" id="password-error">Password cannot be empty</span>
       </div>
        
-      <button type="submit" class="form__button">Claim your free trial</button> 
+      <button type="submit" class="form__button" aria-label="start free trail">Claim your free trial</button> 
     
       <p class="terms">By clicking the button, you are agreeing to our <a class="terms__link" href="#">Terms and Services</a></p>
     </form>
