--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
     <form class="form">
       <div class="form__field">
         <div class="form__input-container">
-          <input type="text" name="first-name" id="first-name" placeholder="First Name">
+          <input type="text" name="first-name" id="first-name" placeholder="First Name" aria-label="first name">
           <img class="form__error-icon" src="images/icon-error.svg" alt="exclamation mark">
         </div>
         <span class="form__error-msg" id="first-name-error">First Name cannot be empty</span>
       </div>
       <div class="form__field">
         <div class="form__input-container">
-          <input type="text" name="last-name" id="last-name" placeholder="Last Name">
+          <input type="text" name="last-name" id="last-name" placeholder="Last Name" aria-label="last name">
           <img class="form__error-icon" src="images/icon-error.svg" alt="exclamation mark">
         </div>
         <span class="form__error-msg" id="last-name-error">Last Name cannot be empty</span>
       </div>
       <div class="form__field">
         <div class="form__input-container">
-          <input type="text" name="email" id="email" placeholder="Email Address">
+          <input type="text" name="email" id="email" placeholder="Email Address" aria-label="email">
           <img class="form__error-icon" src="images/icon-error.svg" alt="exclamation mark">
         </div>
         <span class="form__error-msg" id="email-error">Looks like this is not an email</span>
       </div>
       <div class="form__field">
         <div class="form__input-container">
-          <input type="text" name="password" id="password" placeholder="Password">
+          <input type="text" name="password" id="password" placeholder="Password" aria-label="password">
           <img class="form__error-icon" src="images/icon-error.svg" alt="exclamation mark">
         </div>
         <span class="form__error-msg" id="password-error">Password cannot be empty</span>
