--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <section class="join-us">
     <div class="about">
-      <h2 class="about__header">Join our community</h2>
+      <h1 class="about__header">Join our community</h1>
 
-      <p class="about__money-back">30-day, hassle-free money back guarantee</p>
+      <h2 class="about__money-back">30-day, hassle-free money back guarantee</h2>
 
       <p class="about__description">
         Gain access to our full library of tutorials along with expert code reviews.
