--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <section class="join-us">
+  <main class="join-us">
     <div class="about">
       <h1 class="about__header">Join our community</h1>
 
@@ -22,7 +22,7 @@
       </p>
     </div>
 
-    <div class="subscription">
+    <section class="subscription">
       <h2 class="subscription__header">Monthly Subscription</h2>
 
       <p class="subscription__price"><span class="subscription__price-value">&dollar;29</span> <span class="text-gray">per month</span></p>
@@ -30,9 +30,9 @@
       <p class="subscription_pday">Full access for less than &dollar;1 a day</p>
 
       <button class="subscription__signup">Sign Up</button>
-    </div>
+    </section>
 
-    <div class="benefits">
+    <section class="benefits">
       <h2 class="benefits__header">Why Us</h2>
 
       <ul class="benefits__list">
@@ -44,8 +44,8 @@
         <li class="benefits__list-item"> Flashcard decks</li>
         <li class="benefits__list-item">New videos every week</li>
       </ul>
-    </div>
-  </section>
+    </section>
+  </main>
 
 </body>
 
