--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <main class="join-us">
-    <div class="about">
+    <section class="about">
       <h1 class="about__header">Join our community</h1>
 
       <h2 class="about__money-back">30-day, hassle-free money back guarantee</h2>
@@ -20,7 +20,7 @@
         Gain access to our full library of tutorials along with expert code reviews.
         Perfect for any developers who are serious about honing their skills.
       </p>
-    </div>
+    </section>
 
     <section class="subscription">
       <h2 class="subscription__header">Monthly Subscription</h2>
