--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <img class="illustration" src="images/illustration-dashboard.png" alt="">
   
     <section class="socials">
-      <a class="socials__link" href="" aria-label="Check out our facebook profile"><i class="socials__icon fab fa-facebook-f" aria-hidden="true"></i></a>
-      <a class="socials__link" href="" aria-label="Check out our twitter profile"><i class="socials__icon fab fa-twitter" aria-hidden="true"></i></a>
-      <a class="socials__link" href="" aria-label="Check out our instagram"><i class="socials__icon fab fa-instagram" aria-hidden="true"></i></a>
+      <a class="socials__link" href="#" aria-label="Check out our facebook profile"><i class="socials__icon fab fa-facebook-f" aria-hidden="true"></i></a>
+      <a class="socials__link" href="#" aria-label="Check out our twitter profile"><i class="socials__icon fab fa-twitter" aria-hidden="true"></i></a>
+      <a class="socials__link" href="#" aria-label="Check out our instagram"><i class="socials__icon fab fa-instagram" aria-hidden="true"></i></a>
     </section>
   
     <footer class="footer">&copy; Copyright Ping. All rights reserved.</footer>
