--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img class="testimonial__avatar" src="images/image-daniel.jpg" alt="Daniel Clifford's avatar">
         <div class="flex">
           <span class="testimonial__fullname">Daniel Clifford</span>
-          <span class="testimonial__title">Verified Graduate</span>
+          <span class="testimonial__role">Verified Graduate</span>
         </div>
       </header>
 
@@ -41,7 +41,7 @@
         <img class="testimonial__avatar" src="images/image-jonathan.jpg" alt="Jonathan Walters's avatar">
         <div class="flex">
           <span class="testimonial__fullname">Jonathan Walters</span>
-          <span class="testimonial__title">Verified Graduate</span>
+          <span class="testimonial__role">Verified Graduate</span>
         </div>
       </header>
 
@@ -58,7 +58,7 @@
         <img class="testimonial__avatar" src="images/image-jeanette.jpg" alt="Jeanette Harmon's avatar">
         <div class="flex">
           <span class="testimonial__fullname">Jeanette Harmon</span>
-          <span class="testimonial__title">Verified Graduate</span>
+          <span class="testimonial__role">Verified Graduate</span>
         </div c>
       </header>
 
@@ -75,7 +75,7 @@
         <img class="testimonial__avatar" src="images/image-patrick.jpg" alt="Patric Abram's avatar">
         <div class="flex">
           <span class="testimonial__fullname">Patrick Abrams</span>
-          <span class="testimonial__title">Verified Graduate</span>
+          <span class="testimonial__role">Verified Graduate</span>
         </div>
       </header>
 
@@ -97,7 +97,7 @@
         <img class="testimonial__avatar" src="images/image-kira.jpg" alt="Kira Whittle's avatar">
         <div class="flex">
           <span class="testimonial__fullname">Kira Whittle</span>
-          <span class="testimonial__title">Verified Graduate</span>
+          <span class="testimonial__role">Verified Graduate</span>
         </div>
       </header>
 
