--- a/index.html
+++ b/index.html
@@ -89,123 +89,115 @@
       <h2 class="socials-today__title">Overview - Today</h2>
 
       <section class="social-card-today">
-        <h3>
+        <h3 class="social-card-today__type">
           Page Views
           <img src="images/icon-facebook.svg" alt="">
         </h3>
-        <p class="social-card-today__varation">
-          87
-
+        <div class="social-card-today__varation">
+          <span class="social-card-today__number">87</span>
           <div class="social-card-today__percentages">
-            <img src="images/icon-up.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="">
             3%
           </div>
-        </p>
+        </div>
       </section>
 
       <section class="social-card-today">
-        <h3>Likes
+        <h3 class="social-card-today__type">Likes
           <img src="images/icon-facebook.svg" alt="">
         </h3>
 
-        <p class="social-card-today__varation">
-          52
-
-          <div class="social-card-today__percentages">
-            <img src="images/icon-up.svg" alt="">
+        <div class="social-card-today__varation">
+          <span class="social-card-today__number">52</span>
+          <div class="social-card-today__percentages social-card-today__percentages--dec">
+            <img class="social-card-today__percentages-arrow" src="images/icon-down.svg" alt="">
             2%
           </div>
-        </p>
+        </div>
       </section>
 
       <section class="social-card-today">
-        <h3>Likes
+        <h3 class="social-card-today__type">Likes
           <img src="images/icon-instagram.svg" alt="">
         </h3>
 
-        <p class="social-card-today__varation">
-          5462
-
+        <div class="social-card-today__varation">
+          <span class="social-card-today__number">5462</span>
           <div class="social-card-today__percentages">
-            <img src="images/icon-up.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="">
             2257%
           </div>
-        </p>
+        </div>
       </section>
 
       <section class="social-card-today">
-        <h3>Profile Views
+        <h3 class="social-card-today__type">Profile Views
           <img src="images/icon-instagram.svg" alt="">
         </h3>
 
-        <p class="social-card-today__varation">
-          52k
-
+        <div class="social-card-today__varation">
+          <span class="social-card-today__number">52k</span>
           <div class="social-card-today__percentages">
-            <img src="images/icon-up.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="">
             1375%
           </div>
-        </p>
+        </div>
       </section>
 
       <section class="social-card-today">
-        <h3>Retweets
+        <h3 class="social-card-today__type">Retweets
           <img src="images/icon-twitter.svg" alt="">
         </h3>
 
-        <p class="social-card-today__varation">
-          117
-
+        <div class="social-card-today__varation">
+          <span class="social-card-today__number">117</span>
           <div class="social-card-today__percentages">
-            <img src="images/icon-up.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="">
             303%
           </div>
-        </p>
+        </div>
       </section>
 
       <section class="social-card-today">
-        <h3>Likes
+        <h3 class="social-card-today__type">Likes
           <img src="images/icon-twitter.svg" alt="">
         </h3>
 
-        <p class="social-card-today__varation">
-          507
-
+        <div class="social-card-today__varation">
+          <span class="social-card-today__number">507</span>
           <div class="social-card-today__percentages">
-            <img src="images/icon-up.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="">
             553%
           </div>
-        </p>
+        </div>
       </section>
 
       <section class="social-card-today">
-        <h3>Likes
+        <h3 class="social-card-today__type">Likes
           <img src="images/icon-youtube.svg" alt="">
         </h3>
 
-        <p class="social-card-today__varation">
-          107
-
-          <div class="social-card-today__percentages">
-            <img src="images/icon-up.svg" alt="">
+        <div class="social-card-today__varation">
+          <span class="social-card-today__number">107</span>
+          <div class="social-card-today__percentages social-card-today__percentages--dec">
+            <img class="social-card-today__percentages-arrow" src="images/icon-down.svg" alt="">
             19%
           </div>
-        </p>
+        </div>
       </section>
 
       <section class="social-card-today">
-        <h3>Total Views
+        <h3 class="social-card-today__type">Total Views
           <img src="images/icon-youtube.svg" alt="">
         </h3>
 
-        <p class="social-card-today__varation">
-          1407
-
-          <div class="social-card-today__percentages">
-            <img src="images/icon-up.svg" alt="">
+        <div class="social-card-today__varation">
+          <span class="social-card-today__number">1407</span>
+          <div class="social-card-today__percentages social-card-today__percentages--dec">
+            <img class="social-card-today__percentages-arrow" src="images/icon-down.svg" alt="">
             12%
           </div>
-        </p>
+        </div>
       </section>
     </section>
   </main>
