--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
   <main>
     <header class="header">
-      <h1 class="header__title">Social Media Dashboard</h1>
-      <h2 class="header__followers">Total Followers: 23,004</h2>
+      <div>
+        <h1 class="header__title">Social Media Dashboard</h1>
+        <h2 class="header__followers">Total Followers: 23,004</h2>
+      </div>
 
       <hr class="divider">
 
