--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>Frontend Mentor | mateusz5564</title>
 </head>
 
-<body>
-  <main>
+<body class="page page--dark">
+  <main class="main">
     <header class="header">
       <div>
         <h1 class="header__title">Social Media Dashboard</h1>
