--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="socials-overall">
       <article class="social-card social-card--fb">
         <h2 class="social-card__account">
-          <img src="images/icon-facebook.svg" alt="">
+          <img src="images/icon-facebook.svg" alt="facebook logo">
           <span class="social-card__username">@nathanf</span>
         </h2>
         <p class="social-card__followers">
@@ -37,14 +37,14 @@
           <span class="social-card__followers-lbl">Followers</span>
         </p>
         <p class="social-card__varation">
-          <img class="social-card__varation-arrow" src="images/icon-up.svg" alt="">
+          <img class="social-card__varation-arrow" src="images/icon-up.svg" alt="arrow up">
           12 Today
         </p>
       </article>
 
       <article class="social-card social-card--tw">
         <h2 class="social-card__account">
-          <img src="images/icon-twitter.svg" alt="">
+          <img src="images/icon-twitter.svg" alt="twitter logo">
           <span class="social-card__username">@nathanf</span>
         </h2>
         <p class="social-card__followers">
@@ -52,13 +52,13 @@
           <span class="social-card__followers-lbl">Followers</span>
         </p>
         <p class="social-card__varation">
-          <img class="social-card__varation-arrow" src="images/icon-up.svg" alt="">
+          <img class="social-card__varation-arrow" src="images/icon-up.svg" alt="arrow up">
           99 Today</p>
       </article>
 
       <article class="social-card social-card--in">
         <h2 class="social-card__account">
-          <img src="images/icon-instagram.svg" alt="">
+          <img src="images/icon-instagram.svg" alt="instagram logo">
           <span class="social-card__username">@realnathanf</span>
         </h2>
         <p class="social-card__followers">
@@ -66,13 +66,13 @@
           <span class="social-card__followers-lbl">Followers</span>
         </p>
         <p class="social-card__varation">
-          <img class="social-card__varation-arrow" src="images/icon-up.svg" alt="">
+          <img class="social-card__varation-arrow" src="images/icon-up.svg" alt="arrow up">
           1099 Today</p>
       </article>
 
       <article class="social-card social-card--yt">
         <h2 class="social-card__account">
-          <img src="images/icon-youtube.svg" alt="">
+          <img src="images/icon-youtube.svg" alt="youtube logo">
           <span class="social-card__username">Nathan F.</span>
         </h2>
         <p class="social-card__followers">
@@ -80,7 +80,7 @@
           <span class="social-card__followers-lbl">Subscribers</span>
         </p>
         <p class="social-card__varation social-card__varation--dec">
-          <img class="social-card__varation-arrow" src="images/icon-down.svg" alt="">
+          <img class="social-card__varation-arrow" src="images/icon-down.svg" alt="arrow down">
           144 Today</p>
       </article>
     </section>
@@ -93,12 +93,12 @@
       <section class="social-card-today">
         <h3 class="social-card-today__type">
           Page Views
-          <img src="images/icon-facebook.svg" alt="">
+          <img src="images/icon-facebook.svg" alt="facebook logo">
         </h3>
         <div class="social-card-today__varation">
           <span class="social-card-today__number">87</span>
           <div class="social-card-today__percentages">
-            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="arrow up">
             3%
           </div>
         </div>
@@ -106,13 +106,13 @@
 
       <section class="social-card-today">
         <h3 class="social-card-today__type">Likes
-          <img src="images/icon-facebook.svg" alt="">
+          <img src="images/icon-facebook.svg" alt="facebook logo">
         </h3>
 
         <div class="social-card-today__varation">
           <span class="social-card-today__number">52</span>
           <div class="social-card-today__percentages social-card-today__percentages--dec">
-            <img class="social-card-today__percentages-arrow" src="images/icon-down.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-down.svg" alt="arrow down">
             2%
           </div>
         </div>
@@ -120,13 +120,13 @@
 
       <section class="social-card-today">
         <h3 class="social-card-today__type">Likes
-          <img src="images/icon-instagram.svg" alt="">
+          <img src="images/icon-instagram.svg" alt="instagram logo">
         </h3>
 
         <div class="social-card-today__varation">
           <span class="social-card-today__number">5462</span>
           <div class="social-card-today__percentages">
-            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="arrow up">
             2257%
           </div>
         </div>
@@ -134,13 +134,13 @@
 
       <section class="social-card-today">
         <h3 class="social-card-today__type">Profile Views
-          <img src="images/icon-instagram.svg" alt="">
+          <img src="images/icon-instagram.svg" alt="instagram logo">
         </h3>
 
         <div class="social-card-today__varation">
           <span class="social-card-today__number">52k</span>
           <div class="social-card-today__percentages">
-            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="arrow up">
             1375%
           </div>
         </div>
@@ -148,13 +148,13 @@
 
       <section class="social-card-today">
         <h3 class="social-card-today__type">Retweets
-          <img src="images/icon-twitter.svg" alt="">
+          <img src="images/icon-twitter.svg" alt="twitter logo">
         </h3>
 
         <div class="social-card-today__varation">
           <span class="social-card-today__number">117</span>
           <div class="social-card-today__percentages">
-            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="arrow up">
             303%
           </div>
         </div>
@@ -162,13 +162,13 @@
 
       <section class="social-card-today">
         <h3 class="social-card-today__type">Likes
-          <img src="images/icon-twitter.svg" alt="">
+          <img src="images/icon-twitter.svg" alt="twitter logo">
         </h3>
 
         <div class="social-card-today__varation">
           <span class="social-card-today__number">507</span>
           <div class="social-card-today__percentages">
-            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-up.svg" alt="arrow up">
             553%
           </div>
         </div>
@@ -176,13 +176,13 @@
 
       <section class="social-card-today">
         <h3 class="social-card-today__type">Likes
-          <img src="images/icon-youtube.svg" alt="">
+          <img src="images/icon-youtube.svg" alt="youtube logo">
         </h3>
 
         <div class="social-card-today__varation">
           <span class="social-card-today__number">107</span>
           <div class="social-card-today__percentages social-card-today__percentages--dec">
-            <img class="social-card-today__percentages-arrow" src="images/icon-down.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-down.svg" alt="arrow down">
             19%
           </div>
         </div>
@@ -190,13 +190,13 @@
 
       <section class="social-card-today">
         <h3 class="social-card-today__type">Total Views
-          <img src="images/icon-youtube.svg" alt="">
+          <img src="images/icon-youtube.svg" alt="youtube logo">
         </h3>
 
         <div class="social-card-today__varation">
           <span class="social-card-today__number">1407</span>
           <div class="social-card-today__percentages social-card-today__percentages--dec">
-            <img class="social-card-today__percentages-arrow" src="images/icon-down.svg" alt="">
+            <img class="social-card-today__percentages-arrow" src="images/icon-down.svg" alt="arrow down">
             12%
           </div>
         </div>
