--- a/index.html
+++ b/index.html
@@ -12,28 +12,35 @@
 <body>
 
   <header class="header">
-    <img src="images/logo.svg" alt="">
-    <button><img src="images/icon-hamburger.svg" alt=""></button>
-    <nav class="nav">
-      <ul>
-        <li><a href="" class="nav__link">How we work</a></li>
-        <li><a href="" class="nav__link">Blog</a></li>
-        <li><a href="" class="nav__link">Account</a></li>
-        <li><a href="" class="nav__link">View plans</a></li>
+    <img class="header__img" src="images/logo.svg" alt="">
+    <button class="header__btn"><img src="images/icon-hamburger.svg" alt=""></button>
+    <nav class="header__nav">
+      <ul class="header__list">
+        <li><a href="" class="header__link">How we work</a></li>
+        <li><a href="" class="header__link">Blog</a></li>
+        <li><a href="" class="header__link">Account</a></li>
+        <li><a href="" class="header__link">View plans</a></li>
       </ul>
     </nav>
   </header>
 
   <section class="about">
-    <h1 class="about__heading">Humanizing your insurance.</h1>
+    <picture>
+      <source srcset="images/image-intro-desktop22.jpg" media="(min-width: 600px)" />
+      <img class="about__img" src="images/image-intro-mobile.jpg" alt="">
+    </picture>
 
-    <h2 class="about__subheading">
-      Get your life insurance coverage easier and faster. We blend our expertise
-      and technology to help you find the plan that’s right for you. Ensure you
-      and your loved ones are protected.
-    </h2>
+    <div class="about__content">
+      <h1 class="about__heading">Humanizing your insurance.</h1>
 
-    <a class="about__link" href="#">View plans</a>
+      <h2 class="about__subheading">
+        Get your life insurance coverage easier and faster. We blend our expertise
+        and technology to help you find the plan that’s right for you. Ensure you
+        and your loved ones are protected.
+      </h2>
+
+      <a class="about__link" href="#">View plans</a>
+    </div>
   </section>
 
   <section class="different">
@@ -79,10 +86,13 @@
   <footer class="footer">
 
     <section class="footer__socials">
-      <img class="footer__logo" src="images/logo.svg" alt="">
+      <div>
+        <img class="footer__logo" src="images/logo.svg" alt="">
+      </div>
       <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-facebook.svg"
           alt="facebook profile"></a>
-      <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-twitter.svg" alt="twitter profile"></a>
+      <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-twitter.svg"
+          alt="twitter profile"></a>
       <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-pinterest.svg"
           alt="pinterest profile"></a>
       <a class="footer__social-link" href="#"><img class="footer__social-logo" src="images/icon-instagram.svg"
